# revettr-python

./: .gitignore  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml  publish.yml
docs/integrations/: bankr-integration-spec.md  gina-failure-signal-mapping.md  robonet-mcp-composition.md
examples/: basic_check.py  full_check.py  safe_payment.py  virtuals_acp_safe_buyer.py  wallet_only.py
revettr/: __init__.py  __main__.py  client.py  models.py  safe_x402.py
revettr_mcp/: __init__.py  __main__.py  serve_http.py  server.py
tests/: test_client.py  test_explain_flags.py  test_mcp_tools.py  test_safe_x402.py  test_security.py
